--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./",
     "paths": {
-      "@/components/*": ["./*"]
+      "@/components/*": ["app/components/*"],
+      "@/styles/*": ["app/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
