--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "paths": {
       "@/components/*": ["app/components/*"],
       "@/styles/*": ["app/styles/*"],
+      "@/contexts/*": ["app/contexts/*"],
+      "@/providers/*": ["app/providers/*"],
       "@/lib/*": ["app/lib/*"]
     }
   },
